whitespace compilation fix, some style

--- a/mutraction-dom-template/assets/style.css
+++ b/mutraction-dom-template/assets/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 header h1 {
-    flex-grow: 0.9;
+    flex-grow: 1;
 }
 
 .layout {
@@ -37,13 +37,14 @@ header h1 {
 
 nav {
     flex-basis: 14em;
+    flex-shrink: 0;
     padding: 1em;
     background: #222;
 }
 
 main {
     flex-grow: 1;
-    padding: 4em 2em;
+    padding: 3em 2em;
 }
 
 a {
@@ -65,20 +66,22 @@ figure {
     outline: solid 1px #555;
     border-radius: 0.2em;
     overflow: hidden;
+    margin: 2em;
 }
 
-code {
+figure code {
     display: block;
     padding: 1em;
     background-color: #222;
     border-bottom: solid 1px #666;
     white-space: pre;
-    font-size: 140%;
+    font-size: 130%;
 }
 
 output {
     display: block;
     padding: 1em;
+    background-color: #000;
 }
 
 @keyframes rotating {
